fixed nav bar covering content on page

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -7,9 +7,7 @@ header {
   background-color: aliceblue;
   min-height: 3rem;
   padding: 1rem;
-  position:fixed;
-  top: 0;
-  z-index: 1030;
+
 }
 
 .nav-row {
